Inicio de funcionamiento

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,17 +3,21 @@ project(P1_CompGo C)
 
 set(CMAKE_C_STANDARD 11)
 
+
 add_executable(P1_CompGo main.c
-        definiciones.h
+        interprete.h
         avl.c
         avl.h
-        analisis_lexico.c
-        analisis_sintactico.c
-        analisis_lexico.h
-        analisis_sintactico.h
         tabla_simbolos.c
         tabla_simbolos.h
         errores.c
         errores.h
-        go.yy.c
+        flex.yy.c
+        bison.tab.c
+        bison.tab.h
+        interprete.c
+        comandos.h
+        comandos.c
 )
+
+target_link_libraries(P1_CompGo m)
